--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
     <title>Where's Waldo</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
